// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlatformPicker render() should only render Mobile platforms under Mobile tab 1`] = `
<div
  className="platform-picker"
>
  <ul
    className="nav nav-tabs"
  >
    <li
      style={
        Object {
          "float": "right",
          "marginRight": 0,
        }
      }
    >
      <div
        className="platform-filter-container"
      >
        <span
          className="icon icon-search"
        />
        <input
          className="platform-filter"
          label="Filter"
          onChange={[Function]}
          placeholder="Filter"
          type="text"
        />
      </div>
    </li>
    <ListLink
      activeClassName="active"
      index={false}
      isActive={[Function]}
      onClick={[Function]}
      to=""
    >
      Popular
    </ListLink>
    <ListLink
      activeClassName="active"
      index={false}
      isActive={[Function]}
      onClick={[Function]}
      to=""
    >
      Frontend
    </ListLink>
    <ListLink
      activeClassName="active"
      index={false}
      isActive={[Function]}
      onClick={[Function]}
      to=""
    >
      Mobile
    </ListLink>
    <ListLink
      activeClassName="active"
      index={false}
      isActive={[Function]}
      onClick={[Function]}
      to=""
    >
      Backend
    </ListLink>
    <ListLink
      activeClassName="active"
      index={false}
      isActive={[Function]}
      onClick={[Function]}
      to=""
    >
      All
    </ListLink>
  </ul>
  <ul
    className="client-platform-list platform-tiles"
  >
    <PlatformCard
      className=""
      onClick={[Function]}
      platform="csharp"
    />
    <PlatformCard
      className=""
      onClick={[Function]}
      platform="java"
    />
    <PlatformCard
      className=""
      onClick={[Function]}
      platform="javascript"
    />
    <PlatformCard
      className=""
      onClick={[Function]}
      platform="javascript-react"
    />
    <PlatformCard
      className=""
      onClick={[Function]}
      platform="node-express"
    />
    <PlatformCard
      className=""
      onClick={[Function]}
      platform="php-laravel"
    />
    <PlatformCard
      className=""
      onClick={[Function]}
      platform="php-symfony2"
    />
    <PlatformCard
      className=""
      onClick={[Function]}
      platform="python-django"
    />
    <PlatformCard
      className=""
      onClick={[Function]}
      platform="python-flask"
    />
    <PlatformCard
      className=""
      onClick={[Function]}
      platform="python"
    />
    <PlatformCard
      className=""
      onClick={[Function]}
      platform="ruby-rails"
    />
  </ul>
</div>
`;

exports[`PlatformPicker render() should render renderPlatformList with Python when filtered with P 1`] = `
<div
  className="platform-picker"
>
  <ul
    className="nav nav-tabs"
  >
    <li
      style={
        Object {
          "float": "right",
          "marginRight": 0,
        }
      }
    >
      <div
        className="platform-filter-container"
      >
        <span
          className="icon icon-search"
        />
        <input
          className="platform-filter"
          label="Filter"
          onChange={[Function]}
          placeholder="Filter"
          type="text"
        />
      </div>
    </li>
    <ListLink
      activeClassName="active"
      index={false}
      isActive={[Function]}
      onClick={[Function]}
      to=""
    >
      Popular
    </ListLink>
    <ListLink
      activeClassName="active"
      index={false}
      isActive={[Function]}
      onClick={[Function]}
      to=""
    >
      Frontend
    </ListLink>
    <ListLink
      activeClassName="active"
      index={false}
      isActive={[Function]}
      onClick={[Function]}
      to=""
    >
      Mobile
    </ListLink>
    <ListLink
      activeClassName="active"
      index={false}
      isActive={[Function]}
      onClick={[Function]}
      to=""
    >
      Backend
    </ListLink>
    <ListLink
      activeClassName="active"
      index={false}
      isActive={[Function]}
      onClick={[Function]}
      to=""
    >
      All
    </ListLink>
  </ul>
  <ul
    className="client-platform-list platform-tiles"
  >
    <PlatformCard
      className=""
      onClick={[Function]}
      platform="csharp"
    />
    <PlatformCard
      className=""
      onClick={[Function]}
      platform="java"
    />
    <PlatformCard
      className=""
      onClick={[Function]}
      platform="javascript"
    />
    <PlatformCard
      className=""
      onClick={[Function]}
      platform="javascript-react"
    />
    <PlatformCard
      className=""
      onClick={[Function]}
      platform="node-express"
    />
    <PlatformCard
      className=""
      onClick={[Function]}
      platform="php-laravel"
    />
    <PlatformCard
      className=""
      onClick={[Function]}
      platform="php-symfony2"
    />
    <PlatformCard
      className=""
      onClick={[Function]}
      platform="python-django"
    />
    <PlatformCard
      className=""
      onClick={[Function]}
      platform="python-flask"
    />
    <PlatformCard
      className=""
      onClick={[Function]}
      platform="python"
    />
    <PlatformCard
      className=""
      onClick={[Function]}
      platform="ruby-rails"
    />
  </ul>
</div>
`;

exports[`PlatformPicker render() should render renderPlatformList with community SDKs message if platform not found 1`] = `
<div
  className="platform-picker"
>
  <ul
    className="nav nav-tabs"
  >
    <li
      style={
        Object {
          "float": "right",
          "marginRight": 0,
        }
      }
    >
      <div
        className="platform-filter-container"
      >
        <span
          className="icon icon-search"
        />
        <input
          className="platform-filter"
          label="Filter"
          onChange={[Function]}
          placeholder="Filter"
          type="text"
        />
      </div>
    </li>
    <ListLink
      activeClassName="active"
      index={false}
      isActive={[Function]}
      onClick={[Function]}
      to=""
    >
      Popular
    </ListLink>
    <ListLink
      activeClassName="active"
      index={false}
      isActive={[Function]}
      onClick={[Function]}
      to=""
    >
      Frontend
    </ListLink>
    <ListLink
      activeClassName="active"
      index={false}
      isActive={[Function]}
      onClick={[Function]}
      to=""
    >
      Mobile
    </ListLink>
    <ListLink
      activeClassName="active"
      index={false}
      isActive={[Function]}
      onClick={[Function]}
      to=""
    >
      Backend
    </ListLink>
    <ListLink
      activeClassName="active"
      index={false}
      isActive={[Function]}
      onClick={[Function]}
      to=""
    >
      All
    </ListLink>
  </ul>
  <ul
    className="client-platform-list platform-tiles"
  >
    <PlatformCard
      className=""
      onClick={[Function]}
      platform="csharp"
    />
    <PlatformCard
      className=""
      onClick={[Function]}
      platform="java"
    />
    <PlatformCard
      className=""
      onClick={[Function]}
      platform="javascript"
    />
    <PlatformCard
      className=""
      onClick={[Function]}
      platform="javascript-react"
    />
    <PlatformCard
      className=""
      onClick={[Function]}
      platform="node-express"
    />
    <PlatformCard
      className=""
      onClick={[Function]}
      platform="php-laravel"
    />
    <PlatformCard
      className=""
      onClick={[Function]}
      platform="php-symfony2"
    />
    <PlatformCard
      className=""
      onClick={[Function]}
      platform="python-django"
    />
    <PlatformCard
      className=""
      onClick={[Function]}
      platform="python-flask"
    />
    <PlatformCard
      className=""
      onClick={[Function]}
      platform="python"
    />
    <PlatformCard
      className=""
      onClick={[Function]}
      platform="ruby-rails"
    />
  </ul>
</div>
`;

exports[`PlatformPicker render() should update State.tab onClick when particular tab is clicked 1`] = `
<PlatformPicker
  location={
    Object {
      "query": Object {},
    }
  }
  params={
    Object {
      "isActive": "",
      "platform": "",
      "setPlatform": "",
    }
  }
>
  <div
    className="platform-picker"
  >
    <ul
      className="nav nav-tabs"
    >
      <li
        style={
          Object {
            "float": "right",
            "marginRight": 0,
          }
        }
      >
        <div
          className="platform-filter-container"
        >
          <span
            className="icon icon-search"
          />
          <input
            className="platform-filter"
            label="Filter"
            onChange={[Function]}
            placeholder="Filter"
            type="text"
          />
        </div>
      </li>
      <ListLink
        activeClassName="active"
        index={false}
        isActive={[Function]}
        onClick={[Function]}
        to=""
      >
        <li
          className="active"
        >
          <Link
            onClick={[Function]}
            onlyActiveOnIndex={false}
            style={Object {}}
            to=""
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              Popular
            </a>
          </Link>
        </li>
      </ListLink>
      <ListLink
        activeClassName="active"
        index={false}
        isActive={[Function]}
        onClick={[Function]}
        to=""
      >
        <li
          className=""
        >
          <Link
            onClick={[Function]}
            onlyActiveOnIndex={false}
            style={Object {}}
            to=""
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              Frontend
            </a>
          </Link>
        </li>
      </ListLink>
      <ListLink
        activeClassName="active"
        index={false}
        isActive={[Function]}
        onClick={[Function]}
        to=""
      >
        <li
          className=""
        >
          <Link
            onClick={[Function]}
            onlyActiveOnIndex={false}
            style={Object {}}
            to=""
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              Mobile
            </a>
          </Link>
        </li>
      </ListLink>
      <ListLink
        activeClassName="active"
        index={false}
        isActive={[Function]}
        onClick={[Function]}
        to=""
      >
        <li
          className=""
        >
          <Link
            onClick={[Function]}
            onlyActiveOnIndex={false}
            style={Object {}}
            to=""
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              Backend
            </a>
          </Link>
        </li>
      </ListLink>
      <ListLink
        activeClassName="active"
        index={false}
        isActive={[Function]}
        onClick={[Function]}
        to=""
      >
        <li
          className=""
        >
          <Link
            onClick={[Function]}
            onlyActiveOnIndex={false}
            style={Object {}}
            to=""
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              All
            </a>
          </Link>
        </li>
      </ListLink>
    </ul>
    <ul
      className="client-platform-list platform-tiles"
    >
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="csharp"
      >
        <span
          className="platform-card"
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="csharp"
          >
            <li
              className="platform-tile list-unstyled csharp csharp "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-csharp"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            C#
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="java"
      >
        <span
          className="platform-card"
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="java"
          >
            <li
              className="platform-tile list-unstyled java java "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-java"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Java
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="javascript"
      >
        <span
          className="platform-card"
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="javascript"
          >
            <li
              className="platform-tile list-unstyled javascript javascript "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-javascript"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            JavaScript
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="javascript-react"
      >
        <span
          className="platform-card"
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="javascript-react"
          >
            <li
              className="platform-tile list-unstyled javascript-react javascript "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-javascript-react"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            React
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="node-express"
      >
        <span
          className="platform-card"
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="node-express"
          >
            <li
              className="platform-tile list-unstyled node-express node "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-node-express"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Express
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="php-laravel"
      >
        <span
          className="platform-card"
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="php-laravel"
          >
            <li
              className="platform-tile list-unstyled php-laravel php "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-php-laravel"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Laravel
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="php-symfony2"
      >
        <span
          className="platform-card"
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="php-symfony2"
          >
            <li
              className="platform-tile list-unstyled php-symfony2 php "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-php-symfony2"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Symfony2
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="python-django"
      >
        <span
          className="platform-card"
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="python-django"
          >
            <li
              className="platform-tile list-unstyled python-django python "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-python-django"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Django
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="python-flask"
      >
        <span
          className="platform-card"
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="python-flask"
          >
            <li
              className="platform-tile list-unstyled python-flask python "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-python-flask"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Flask
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="python"
      >
        <span
          className="platform-card"
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="python"
          >
            <li
              className="platform-tile list-unstyled python python "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-python"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Python
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="ruby-rails"
      >
        <span
          className="platform-card"
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="ruby-rails"
          >
            <li
              className="platform-tile list-unstyled ruby-rails ruby "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-ruby-rails"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Rails
             
          </h5>
        </span>
      </PlatformCard>
    </ul>
  </div>
</PlatformPicker>
`;
